openshift-deploy/nexus/nexus-route.yaml
# nexus-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nexus
spec:
  to:
    kind: Service
    name: nexus
  port:
    targetPort: http
  tls:
    termination: edge
